--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,32 @@
 plugins {
-    id 'java'
+    id 'java-library'
+    id 'io.qameta.allure' version '2.12.0'
 }
-
-group = 'isergv'
-version = '1.0-SNAPSHOT'
-
+sourceCompatibility = 21
+allure {
+    version.set("2.29.0")
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.29.0")
+            }
+        }
+    }
+}
 repositories {
     mavenCentral()
 }
-
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
+    testImplementation 'com.codeborne:selenide:7.7.3'
+    testImplementation 'io.qameta.allure:allure-selenide:2.29.0'
+    testImplementation 'org.slf4j:slf4j-simple:2.0.12'
 }
-
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
 test {
     useJUnitPlatform()
+    systemProperty "selenide.headless", System.getProperty("selenide.headless", "false")
 }
